Add comprehensive packaging and installation support
- Fix entry points in pyproject.toml to use correct module path
- Add short alias 'ebm' for easier command-line usage
- Create INSTALL.md with detailed installation instructions
- Add Windows PATH setup scripts (PowerShell and Batch)
- Update README.md with new installation and usage instructions
- Support multiple execution methods:
  * ebook-manager (full command)
  * ebm (short alias)
  * python -m ebook_manager (module execution)
- Verify all entry points work correctly after pip install -e .

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,8 @@ Repository = "https://github.com/OttScott/ebook-manager.git"
 "Bug Tracker" = "https://github.com/OttScott/ebook-manager/issues"
 
 [project.scripts]
-ebook-manager = "ebook_manager:main"
+ebook-manager = "ebook_manager.__main__:main"
+ebm = "ebook_manager.__main__:main"
 
 [tool.setuptools]
 packages = ["ebook_manager"]
